syntax = "proto3";

package go.micro.srv.PostAvatar;

service Example {
	rpc PostAvatar(Request) returns (Response) {}

}

message Message {
	string say = 1;
}

message Request {
	//二进制图片流
	bytes Avatar =1 ;
	//文件大小
	int64 Filesize =2 ;
	//文件后缀
	string Fileext = 3 ;
	string SessionId = 4 ;
}

message Response {
	string Errno = 1;
	string Errmsg = 2;
	//不完整的头像地址
	string Avatar_url = 3;
}